<resources>
    <string name="app_name">IncrediCABS</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <!-- String arrays-->
    <string-array name="pickupLocationArray">
        <item>Select</item>
        <item>Home</item>
        <item>Office</item>
        <item>Other</item>
    </string-array>
    <string-array name="dropLocationArray">
        <item>Select</item>
        <item>Home</item>
        <item>Office</item>
        <item>Other</item>
    </string-array>

    <string-array name="approverManagerArray">
        <item>Lvl 1 Manager</item>
        <item>Lvl 2 Manager</item>
    </string-array>

    <string name="app_description">iNCRediCabs is a Product fully developed by interns 2018 batch,
                                    this app and website is made to make the handling of the transport
                                    department easier and making your cab rides easier.</string>
    <string name="login_login_top_label">User Login</string>
    <string name="login_qlid_text_hint">QLID</string>
    <string name="login_password_text_hint">Password</string>
    <string name="login_login_button_text">Login</string>
    <string name="login_title_text">iNCRediCabs</string>
    <string name="login_subtitle_text">The NCR internal Cab System</string>
    <string name="login_copy">Copyright © 2018 NCR Corp. All rights reserved</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="message">Do you really want to exit ?</string>
    <string name="title_activity_unscheduled_request">Unscheduled Request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="FromDate">From date</string>
    <string name="ToDate">To Date</string>
    <string name="help_and_support">Help and Support</string>
    <string name="PickTime">Pick Time</string>
    <string name="PickupLocation">Pickup Area</string>
    <string name="DropLocation">Drop Area</string>
    <string name="notifications_admin_channel_name">Global channel</string>
    <string name="notifications_admin_channel_description">Notifications sent from the app admin</string>
    <string name="complaints">Complaints</string>
    <string name="request_cab">Request Cab</string>
    <string name="check_in">  CHECK IN</string>
    <string name="check_out"> CHECK OUT</string>
    <string name="field_drop_time">Drop Time</string>
    <string name="field_pickup_time">Pickup Time</string>
    <string name="title_activity_feedback">Complaints</string>
    <string name="copy_right">Copyright</string>
    <string name="sos_cancelled">SOS cancelled</string>
    <string name="notinanyCabs">Currently you\'re not in any Cabs</string>
    <string name="alert_request_submitted">Request Successfully Submitted, Ride will be Scheduled soon. </string>
    <string name="title_activity_request_notifications">RequestNotifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_you_re_unscheduled_cab_requests">All you\'re Unscheduled Cab Requests show up here,currently You haven\'t made any request yet.</string>
    <string name="communicate">Communicate</string>
    <string name="call_transport_admin_1">Call Transport Admin 1</string>
    <string name="call_transport_admin_2">Call Transport Admin 2</string>
</resources>
