<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_call_transport_one"
                android:icon="@drawable/ic_contact_transport_sidemenu"
                android:title="@string/call_transport_admin_1" />

            <item
                android:id="@+id/nav_call_transport_two"
                android:icon="@drawable/ic_contact_transport_sidemenu"
                android:title="@string/call_transport_admin_2" />

            <item
                android:id="@+id/nav_app_feedback"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="Help and Support"
                android:visible="false" />

            <item
                android:id="@+id/nav_requests"
                android:icon="@drawable/ic_car_notification"
                android:title="Cab Requests" />

            <item
                android:id="@+id/nav_about_developers"
                android:icon="@drawable/ic_info_about_developers"
                android:title="About" />
            <item
                android:id="@+id/LogOut"
                android:icon="@drawable/ic_log_out"
                android:orderInCategory="100"
                android:title="@string/log_out" />

        </menu>
    </item>

</menu>
